2006-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_xspf_track): Don't crash
	if there's no URL found in the XSPF track entry (Closes: #386089)

2006-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_is_seekable):
	  Use SEEKING query to query seekability instead of second-guessing
	  based on whether we have a duration or not (Closes: #365414).
	  Needs decoder/demuxer support.

2006-12-14  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.h: Fix typo, thanks uws

2006-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (cb_gconf):
	  Fix copy'n'pasto and update the buffer-size when the buffer-size key
	  is changed, not the buffering threshold. (Closes: #382350)

2006-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Fix nonsensical code; don't overwrite speaker setup preferences
	  saved in gconf with default values when run in metadata or
	  capture mode. (Closes: #379740)

2006-12-11  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: make the Eject button default to insensitive
	(Closes: #384736)

2006-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_set_volume), (bacon_video_widget_new):
	Have _can_set_volume behave properly, don't fail creating the
	video widget if we can't create an audio sink and we're not in audio
	mode (Closes: #170719)

============ Version 2.16.4

2006-11-28  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.16.4

2006-11-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-sidebar.c: (totem_sidebar_setup):
	* src/totem.c: (totem_action_save_state),
	(main_pane_size_allocated), (totem_setup_window),
	(video_widget_create): Patch from Jan Arne Petersen