@@ -1,3 +1,10 @@
+2007-01-05  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bvw_handle_element_message):
+	  Handle "progress" message that qtdemux >= 0.10.4 posts instead of
+	  a buffering message (Closes: #392898).
+
 2006-12-18  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plparse/totem-pl-parser.c: (parse_xspf_track): Don't crash
